<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="finalproject.csci205.com.ymca.view.MainActivity">

    <TextView
        android:id="@+id/tvQuote"
        style="@style/quoteTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/encouraging_quote_default" />

    <TextView
        android:id="@+id/tvBeginButton"
        style="@style/BeginButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvQuote"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/beginButton" />


</RelativeLayout>
