<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentDetailTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/tvDueAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_due_at"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvDueAt"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:text="@string/tv_due_date"
                android:textSize="14dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/horizontal_padding_rv_subtasks"
            android:paddingRight="@dimen/horizontal_padding_rv_subtasks">

            <TextView
                android:id="@+id/tvSubtasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_subtasks"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/addSubtaskBtn"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/tvSubtasks"
                android:src="@drawable/ic_action_add" />

            <EditText
                android:id="@+id/etSubtask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSubtasks"
                android:hint="@string/et_subtask"
                android:inputType="textVisiblePassword"
                android:lines="1"
                android:textColor="@android:color/white"
                android:textColorHint="#BDBDBD"
                android:textSize="14dp"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvSubtasks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/etSubtask" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>