<resources>
    <string name="app_name">Hana!</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    --MainActivity Strings--
    <string name="encouraging_quote_default">You\'re moments away from beginning\nyour journey towards a more \nproductive you</string>
    <string name="beginButton">BEGIN</string>

    <string name="error_til_add_task">Enter a task name</string>
    <string name="negative_btn_save">Save</string>
    <string name="positive_btn_edit">Edit</string>
    <string name="menuitem_tasks">Tasks</string>
    <string name="menuitem_pomodoro">Pomodoro</string>
    <string name="menuitem_tenminute">10-Minute Hack</string>
    <string name="tv_due_date">Tap to set due date</string>
    <string name="tv_time_left_unset">Tap to edit details</string>
    <string name="notification_title">Timer is up!</string>
    <string name="notification_context">Click to return to app!</string>
    <string name="title_add_quick_task_dialog">Add Task</string>
    <string name="err_negative_btn_task">Enter a task name</string>
    <string name="title_gtd_fragment">Task List</string>
    <string name="tag_add_quick_task_frag">Add Task</string>
    <string name="title_pomodoro_fragment">Pomodoro</string>
    <string name="err_pom_settings_invalid">Invalid input parameter(s). Please try again!</string>
    <string name="snackbar_task_delete">Item has been deleted</string>
    <string name="snackbar_task_undo">UNDO</string>
    <string name="tv_mins">00</string>
    <string name="notif_label">Time Remaining</string>
    <string name="et_add_task">Task Name</string>
    <string name="et_session_time">Session length (minutes)</string>
    <string name="tv_ticker">00 : 00</string>
    <string name="tv_min_label">min</string>
    <string name="tv_seconds">00</string>
    <string name="et_break_time">Break length (minutes)</string>
    <string name="tv_sec_label">sec</string>
    <string name="et_num_breaks">Number of cycles till long break</string>
    <string name="tv_due_at">Due at</string>
    <string name="et_long_break">Long break length (minutes)</string>
    <string name="tv_subtasks">Subtasks</string>
    <string name="et_subtask">Title</string>
    <string name="tenmin_initial_prompt">When do you wake up?</string>
    <string name="title_tenmin_fragment">10-Minute Hack</string>
    <string name="tenmin_completion_title">10 minutes are up!</string>
    <string name="tenmin_completion_content">Good job! Keep up the good work!</string>
</resources>
